Git stable
------------------------------------------------------------------------------------------------------------------------

ADDONS:
	Fixed: Quotation marks must be escaped in PhpMyAdmin configuration file
	Fixed: Quotation marks must be escaped in Roundcube configuration file

CONFIGS
	Removed: GUI_CERT_DIR variable (replaced by CONF_DIR variable)
	Cleanup: Package files, config files
	Removed: Ubuntu imscp.conf file (Debian conffile is now used when no conffile is available for the selected distro)
	Removed: Ubuntu layout file (Debian layout is now used when no layout is available for the selected distro)

DAEMON
	Removed: Useless daemon logs + small fixes
	Updated: Version to 1.2.1

DATABASE
	Fixed: Error messages from database updates are not detailled
	Fixed: Ftp, Mail and SQL passwords are not decrypted during database update r53
	Fixed: Infinite loop in iMSCP_Update_Database::dropIndexByColumn()
	Fixed: Undefined key KEY_NAME in iMSCP_Update_Database::dropIndexByColumn()
	Fixed: Undefined offset in database update r169

DISTROS
	Re-added: Courier as alternative for IMAP/POP3 servers (Debian Jessie)

ENGINE
	Added: iMSCP::Net::getAddrType() method
	Changed: Backslashes are no longer allowed in SQL user names and passwords
	Changed: SASL authentication is now made against database directly (Postfix)
	Fixed: Any error occurring from the imscp_network script must go into the imscp_network.log file
	Fixed: German special characters are not displayed properly in auto-reply messages
	Fixed: In case the passphrase is missing, user must not be prompted (iMSCP::OpenSSL)
	Fixed: Missing EOL in SSL certificate containers (iMSCP::OpenSSL)
	Fixed: The backend must not try to start services which are not used (MySQL, Bind9)
	Fixed: Quota script must ignore maildir which doesn't exist
	Replaced: Dovecot SASL by Cyrus SASL (Postfix)

GUI
	Fixed: Feature custom_dns_record is not known by the customerHasFeature() function

INSTALLER