@@ -1,13 +1,5 @@
 ROUNDCUBE_VERSION =
-
 ROUNDCUBE_CONF_DIR = tools/webmail/config
-
-ROUNDCUBE_PWCHANGER_DIR = tools/webmail/plugins/imscp_pw_changer
-
 DATABASE_USER =
-
 DATABASE_PASSWORD =
-
 DES_KEY =
-
-PLUGINS = 'imscp_pw_changer'
